--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "farm-pair-vue",
   "version": "0.1.0",
+  "main": "public/index.html",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,12 +9,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.12.0",
+    "core-js": "^3.6.5",
+    "express": "^4.17.1",
+    "hashids": "^2.2.1",
+    "mqtt": "^3.0.0",
+    "vue": "^2.6.11",
+    "vue-js-toggle-button": "^1.3.3",
+    "vue-router": "^3.1.6",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
+    "@vue/cli-plugin-router": "^4.3.1",
+    "@vue/cli-plugin-vuex": "^4.3.1",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
@@ -32,7 +43,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "warn"
+    }
   },
   "browserslist": [
     "> 1%",
