--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-js-toggle-button": "^1.3.3",
     "vue-router": "^3.1.6",
+    "vue2-google-maps": "^0.10.7",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
